attack function - fire or water

--- a/game.html
+++ b/game.html
@@ -18,7 +18,12 @@
         <section id="nicknameSection">
             <h1>Enter Your Nickname</h1>
             <p id="nicknameCondition"></p>
-            <input type="text" name="enterNickname" id="enterNickname" spellcheck="false">
+            <input
+                type="text"
+                name="enterNickname"
+                id="enterNickname"
+                spellcheck="false"
+            />
             <button id="submitNicknameBtn">Submit</button>
         </section>
 
@@ -33,7 +38,12 @@
                     <div class="shipsGarageBx"></div>
                     <div class="shipsGarageBx"></div>
                     <div class="shipInGarageBxImg">
-                    <img src="./res/img/ship0.png" alt="" class="shipInGarageImg" draggable="false">
+                        <img
+                            src="./res/img/ship0.png"
+                            alt=""
+                            class="shipInGarageImg"
+                            draggable="false"
+                        />
                     </div>
                 </div>
                 <div class="shipsInGarage">
@@ -41,39 +51,83 @@
                     <div class="shipsGarageBx"></div>
                     <div class="shipsGarageBx"></div>
                     <div class="shipInGarageBxImg">
-                        <img src="./res/img/ship1.png" alt="" class="shipInGarageImg" draggable="false">
-                        </div>
+                        <img
+                            src="./res/img/ship1.png"
+                            alt=""
+                            class="shipInGarageImg"
+                            draggable="false"
+                        />
+                    </div>
                 </div>
                 <div class="shipsInGarage">
                     <div class="shipsGarageBx"></div>
                     <div class="shipsGarageBx"></div>
                     <div class="shipsGarageBx"></div>
                     <div class="shipInGarageBxImg">
-                        <img src="./res/img/ship2.png" alt="" class="shipInGarageImg" draggable="false">
-                        </div>
+                        <img
+                            src="./res/img/ship2.png"
+                            alt=""
+                            class="shipInGarageImg"
+                            draggable="false"
+                        />
+                    </div>
                 </div>
                 <div class="shipsInGarage">
                     <div class="shipsGarageBx"></div>
                     <div class="shipsGarageBx"></div>
                     <div class="shipInGarageBxImg">
-                        <img src="./res/img/ship3.png" alt="" class="shipInGarageImg" draggable="false">
-                        </div>
+                        <img
+                            src="./res/img/ship3.png"
+                            alt=""
+                            class="shipInGarageImg"
+                            draggable="false"
+                        />
+                    </div>
                 </div>
                 <div class="shipsInGarage">
                     <div class="shipsGarageBx"></div>
                     <div class="shipsGarageBx"></div>
                     <div class="shipInGarageBxImg">
-                        <img src="./res/img/ship4.png" alt="" class="shipInGarageImg" draggable="false">
-                        </div>
+                        <img
+                            src="./res/img/ship4.png"
+                            alt=""
+                            class="shipInGarageImg"
+                            draggable="false"
+                        />
+                    </div>
                 </div>
             </div>
             <div id="arrowBx">
-                <img src="./res/img/arrow.png" alt="" class="arrow" id="arrowUp" draggable="false">
+                <img
+                    src="./res/img/arrow.png"
+                    alt=""
+                    class="arrow"
+                    id="arrowUp"
+                    draggable="false"
+                />
                 <div>
-                <img src="./res/img/arrow.png" alt="" class="arrow" id="arrowLeft" draggable="false">
-                <img src="./res/img/arrow.png" alt="" class="arrow" id="arrowRight" draggable="false">
+                    <img
+                        src="./res/img/arrow.png"
+                        alt=""
+                        class="arrow"
+                        id="arrowLeft"
+                        draggable="false"
+                    />
+                    <img
+                        src="./res/img/arrow.png"
+                        alt=""
+                        class="arrow"
+                        id="arrowRight"
+                        draggable="false"
+                    />
                 </div>
-                <img src="./res/img/arrow.png" alt="" class="arrow" id="arrowDown" draggable="false">
+                <img
+                    src="./res/img/arrow.png"
+                    alt=""
+                    class="arrow"
+                    id="arrowDown"
+                    draggable="false"
+                />
             </div>
             <div id="saveButtonOverLap"></div>
             <div id="rotateButtonOverLap"></div>
@@ -106,11 +160,9 @@
                     <div class="buildSquareColumn">9</div>
                     <div class="buildSquareColumn">10</div>
                 </div>
-                
-                <div id="buildBoard">
-                </div>
+
+                <div id="buildBoard"></div>
             </div>
-            
         </section>
 
         <!-- game -->
@@ -121,7 +173,12 @@
                 <div class="myShipsBx"></div>
                 <div class="myShipsBx"></div>
                 <div class="myShipsBxImg">
-                <img src="./res/img/ship0.png" alt="" class="myShipsImg" draggable="false">
+                    <img
+                        src="./res/img/ship0.png"
+                        alt=""
+                        class="myShipsImg"
+                        draggable="false"
+                    />
                 </div>
             </div>
             <div class="myShips">
@@ -129,41 +186,76 @@
                 <div class="myShipsBx"></div>
                 <div class="myShipsBx"></div>
                 <div class="myShipsBxImg">
-                    <img src="./res/img/ship1.png" alt="" class="myShipsImg" draggable="false">
-                    </div>
+                    <img
+                        src="./res/img/ship1.png"
+                        alt=""
+                        class="myShipsImg"
+                        draggable="false"
+                    />
+                </div>
             </div>
             <div class="myShips">
                 <div class="myShipsBx"></div>
                 <div class="myShipsBx"></div>
                 <div class="myShipsBx"></div>
                 <div class="myShipsBxImg">
-                    <img src="./res/img/ship2.png" alt="" class="myShipsImg" draggable="false">
-                    </div>
+                    <img
+                        src="./res/img/ship2.png"
+                        alt=""
+                        class="myShipsImg"
+                        draggable="false"
+                    />
+                </div>
             </div>
             <div class="myShips">
                 <div class="myShipsBx"></div>
                 <div class="myShipsBx"></div>
                 <div class="myShipsBxImg">
-                    <img src="./res/img/ship3.png" alt="" class="myShipsImg" draggable="false">
-                    </div>
+                    <img
+                        src="./res/img/ship3.png"
+                        alt=""
+                        class="myShipsImg"
+                        draggable="false"
+                    />
+                </div>
             </div>
             <div class="myShips">
                 <div class="myShipsBx"></div>
                 <div class="myShipsBx"></div>
                 <div class="myShipsBxImg">
-                    <img src="./res/img/ship4.png" alt="" class="myShipsImg" draggable="false">
-                    </div>
+                    <img
+                        src="./res/img/ship4.png"
+                        alt=""
+                        class="myShipsImg"
+                        draggable="false"
+                    />
+                </div>
             </div>
             <div id="playersTurn">
                 <div id="myIcon">
-                    <img src="./res/img/player.png" alt="" class="iconImg" draggable="false">
+                    <img
+                        src="./res/img/player.png"
+                        alt=""
+                        class="iconImg"
+                        draggable="false"
+                    />
                     <div id="myIconName" class="iconName">Me</div>
                 </div>
                 <div id="playersTurnArrowBx">
-                    <img src="./res/img/arrow2.png" alt="" id="playersTurnArrow" draggable="false">
+                    <img
+                        src="./res/img/arrow2.png"
+                        alt=""
+                        id="playersTurnArrow"
+                        draggable="false"
+                    />
                 </div>
                 <div id="enemyIcon">
-                    <img src="./res/img/computer.png" alt="" class="iconImg" draggable="false">
+                    <img
+                        src="./res/img/computer.png"
+                        alt=""
+                        class="iconImg"
+                        draggable="false"
+                    />
                     <div class="iconName">Computer</div>
                 </div>
             </div>
@@ -203,7 +295,12 @@
                 <div class="enemyShipsBx"></div>
                 <div class="enemyShipsBx"></div>
                 <div class="enemyShipsBxImg">
-                <img src="./res/img/ship0.png" alt="" class="enemyShipsImg" draggable="false">
+                    <img
+                        src="./res/img/ship0.png"
+                        alt=""
+                        class="enemyShipsImg"
+                        draggable="false"
+                    />
                 </div>
             </div>
             <div class="enemyShips">
@@ -211,30 +308,50 @@
                 <div class="enemyShipsBx"></div>
                 <div class="enemyShipsBx"></div>
                 <div class="enemyShipsBxImg">
-                    <img src="./res/img/ship1.png" alt="" class="enemyShipsImg" draggable="false">
-                    </div>
+                    <img
+                        src="./res/img/ship1.png"
+                        alt=""
+                        class="enemyShipsImg"
+                        draggable="false"
+                    />
+                </div>
             </div>
             <div class="enemyShips">
                 <div class="enemyShipsBx"></div>
                 <div class="enemyShipsBx"></div>
                 <div class="enemyShipsBx"></div>
                 <div class="enemyShipsBxImg">
-                    <img src="./res/img/ship2.png" alt="" class="enemyShipsImg" draggable="false">
-                    </div>
+                    <img
+                        src="./res/img/ship2.png"
+                        alt=""
+                        class="enemyShipsImg"
+                        draggable="false"
+                    />
+                </div>
             </div>
             <div class="enemyShips">
                 <div class="enemyShipsBx"></div>
                 <div class="enemyShipsBx"></div>
                 <div class="enemyShipsBxImg">
-                    <img src="./res/img/ship3.png" alt="" class="enemyShipsImg" draggable="false">
-                    </div>
+                    <img
+                        src="./res/img/ship3.png"
+                        alt=""
+                        class="enemyShipsImg"
+                        draggable="false"
+                    />
+                </div>
             </div>
             <div class="enemyShips">
                 <div class="enemyShipsBx"></div>
                 <div class="enemyShipsBx"></div>
                 <div class="enemyShipsBxImg">
-                    <img src="./res/img/ship4.png" alt="" class="enemyShipsImg" draggable="false">
-                    </div>
+                    <img
+                        src="./res/img/ship4.png"
+                        alt=""
+                        class="enemyShipsImg"
+                        draggable="false"
+                    />
+                </div>
             </div>
             <div id="enemyArea">
                 <div id="enemyAreaRow">
