enemy attack almost done

--- a/game.html
+++ b/game.html
@@ -296,7 +296,7 @@
                 <div class="enemyShipsBx"></div>
                 <div class="enemyShipsBxImg">
                     <img
-                        src="./res/img/ship0.png"
+                        src="./res/img/shipFire0.png"
                         alt=""
                         class="enemyShipsImg"
                         draggable="false"
@@ -309,7 +309,7 @@
                 <div class="enemyShipsBx"></div>
                 <div class="enemyShipsBxImg">
                     <img
-                        src="./res/img/ship1.png"
+                        src="./res/img/shipFire1.png"
                         alt=""
                         class="enemyShipsImg"
                         draggable="false"
@@ -322,7 +322,7 @@
                 <div class="enemyShipsBx"></div>
                 <div class="enemyShipsBxImg">
                     <img
-                        src="./res/img/ship2.png"
+                        src="./res/img/shipFire2.png"
                         alt=""
                         class="enemyShipsImg"
                         draggable="false"
@@ -334,7 +334,7 @@
                 <div class="enemyShipsBx"></div>
                 <div class="enemyShipsBxImg">
                     <img
-                        src="./res/img/ship3.png"
+                        src="./res/img/shipFire3.png"
                         alt=""
                         class="enemyShipsImg"
                         draggable="false"
@@ -346,7 +346,7 @@
                 <div class="enemyShipsBx"></div>
                 <div class="enemyShipsBxImg">
                     <img
-                        src="./res/img/ship4.png"
+                        src="./res/img/shipFire4.png"
                         alt=""
                         class="enemyShipsImg"
                         draggable="false"
