--- a/game.html
+++ b/game.html
@@ -259,8 +259,18 @@
                     <div class="iconName">Computer</div>
                 </div>
             </div>
-            <h2 id="myBoardTitle">Your Board</h2>
-            <h2>Enemy Board</h2>
+            <div id="myCannon">
+                <img src="./res/img/cannon.png" alt="" draggable="false">
+            </div>
+            <div id="myBullet">
+                <img src="./res/img/bullet4.png" alt="" draggable="false">
+            </div>
+            <div id="enemyCannon">
+                <img src="./res/img/cannon.png" alt="" draggable="false">
+            </div>
+            <div id="enemyBullet">
+                <img src="./res/img/bullet4.png" alt="" draggable="false">
+            </div>
             <div id="myArea">
                 <div id="myAreaRow">
                     <div class="mySquareRow"></div>
