--- a/game.html
+++ b/game.html
@@ -263,13 +263,17 @@
                 <img src="./res/img/cannon.png" alt="" draggable="false">
             </div>
             <div id="myBullet">
-                <img src="./res/img/bullet4.png" alt="" draggable="false">
+                <img src="./res/img/bullet.png" alt="" draggable="false">
             </div>
             <div id="enemyCannon">
                 <img src="./res/img/cannon.png" alt="" draggable="false">
             </div>
             <div id="enemyBullet">
-                <img src="./res/img/bullet4.png" alt="" draggable="false">
+                <img src="./res/img/bullet.png" alt="" draggable="false ">
+            </div>
+            <div id="myExplosion">
+            </div>
+            <div id="enemyExplosion">
             </div>
             <div id="myArea">
                 <div id="myAreaRow">
