end game section

--- a/game.html
+++ b/game.html
@@ -260,21 +260,19 @@
                 </div>
             </div>
             <div id="myCannon">
-                <img src="./res/img/cannon.png" alt="" draggable="false">
+                <img src="./res/img/cannon.png" alt="" draggable="false" />
             </div>
             <div id="myBullet">
-                <img src="./res/img/bullet.png" alt="" draggable="false">
+                <img src="./res/img/bullet.png" alt="" draggable="false" />
             </div>
             <div id="enemyCannon">
-                <img src="./res/img/cannon.png" alt="" draggable="false">
+                <img src="./res/img/cannon.png" alt="" draggable="false" />
             </div>
             <div id="enemyBullet">
-                <img src="./res/img/bullet.png" alt="" draggable="false ">
+                <img src="./res/img/bullet.png" alt="" draggable="false " />
             </div>
-            <div id="myExplosion">
-            </div>
-            <div id="enemyExplosion">
-            </div>
+            <div id="myExplosion"></div>
+            <div id="enemyExplosion"></div>
             <div id="myArea">
                 <div id="myAreaRow">
                     <div class="mySquareRow"></div>
@@ -397,6 +395,15 @@
             </div>
         </main>
 
+        <!-- end game section -->
+        <section id="endSection">
+            <h1 id="winnerInfo">Player won</h1>
+            <div id="scoreInfo"></div>
+            <div id="endbuttonBx">
+                <a href="./index.html" id="mainMenu"></a>
+                <button id="playAgain"></button>
+            </div>
+        </section>
         <script src="./res/js/game.js"></script>
     </body>
 </html>
