--- a/index.html
+++ b/index.html
@@ -20,11 +20,22 @@
             <div>
                 
                 <a href="./game.html" id="playGameMenu">Play!</a>
-                <a href="#" id="startTutorial">Tutorial</a>
+                <a href="./tutorial.html" id="startTutorial">Tutorial</a>
                 
+            </div>
+            <img src="./res/img/refresh.png" alt="" id="refreshButton" draggable="false">
+        </section>
+
+        <section id="refreshSection">
+            <div id="refreshArea">
+                <h1>Do you want reset all game?</h1>
+                <div id="refreshBx">
+                    <button id="refreshYes">Yes</button>
+                    <button id="refreshNo">No</button>
+                </div>
             </div>
         </section>
 
-
+    <script src="./res/js/main.js"></script>
     </body>
 </html>
